added the login and bootstrap

--- a/quora/templates/quora/answer.html
+++ b/quora/templates/quora/answer.html
@@ -1,5 +1,11 @@
+{% extends 'quora/base.html' %}
+
+{% block content  %}
+
 <form action="" method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit">Answer</button>
 </form>
+
+{% endblock %}
