--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,10 +1,13 @@
 {% extends 'quora/base.html' %}
 
 {% block content %}
+
+
+<h1>Login</h1>
 <form action="" method="POST">
     {% csrf_token %}
-    {{form.as_table}}
-    <button type="submit">Ask</button>
+    {{form.as_p}}
+    <button type="submit">Login</button>
 </form>
 
 {% endblock %}
