--- a/quora/templates/quora/answer_list.html
+++ b/quora/templates/quora/answer_list.html
@@ -1,3 +1,6 @@
+{% extends 'quora/base.html' %}
+
+{% block content %}
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -7,3 +10,5 @@
 </ul>
 
 <a href="{% url 'answer' pk=question.id %}">Add your answer</a>
+
+{% endblock %}
