--- a/quora/templates/quora/question_list.html
+++ b/quora/templates/quora/question_list.html
@@ -1,5 +1,10 @@
+{% extends 'quora/base.html' %}
+
+{% block content %}
 <ul>
   {% for question in questions %}
     <li><a href="{% url 'answers' pk=question.id %}">{{ question.question_text }}</a></li>
   {% endfor %}
 </ul>
+
+{% endblock %}
