--- a/quora/templates/quora/question_list.html
+++ b/quora/templates/quora/question_list.html
@@ -3,7 +3,8 @@
 {% block content %}
 <ul>
   {% for question in questions %}
-    <li><a href="{% url 'answers' pk=question.id %}">{{ question.question_text }}</a></li>
+    <li><a href="{% url 'answers' pk=question.id %}"><h3>{{ question.question_text }}</h3></a></li>
+    <li>asked by {{ question.author }}</li>
   {% endfor %}
 </ul>
 
