--- a/quora/templates/quora/base.html
+++ b/quora/templates/quora/base.html
@@ -58,6 +58,7 @@
           {% endif %}
 
           {% if not user.is_authenticated %}
+            <li><a href="{% url 'register' %}">Register</a></li>
             <li><a href="{% url 'login' %}">Login</a></li>
           {% endif %}    
         
